--- a/src/geoquestgame/MapaMundi.form
+++ b/src/geoquestgame/MapaMundi.form
@@ -35,7 +35,7 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jPanel1">
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="jPanel1 = new BackgroundPanel(new ImageIcon(getClass().getResource(&quot;../imagens/qualNomeDaBandeira.png&quot;)).getImage())"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="jPanel1 = new BackgroundPanel(new ImageIcon(getClass().getResource(&quot;/imagens/qualNomeDaBandeira.png&quot;)).getImage())"/>
       </AuxValues>
 
       <Layout>
@@ -102,7 +102,7 @@
       <SubComponents>
         <Container class="javax.swing.JPanel" name="jPanel2">
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new BackgroundPanel(new ImageIcon(getClass().getResource(&quot;../imagens/&quot;+pais+&quot;Mapa.jpg&quot;)).getImage())"/>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new BackgroundPanel(new ImageIcon(getClass().getResource(&quot;/imagens/&quot;+pais+&quot;Mapa.jpg&quot;)).getImage())"/>
           </AuxValues>
 
           <Layout>
@@ -123,7 +123,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JButton() {&#xa;    @Override&#xa;    public void paintComponent(java.awt.Graphics g) {&#xa;        java.awt.Image img = new javax.swing.ImageIcon(getClass().getResource(&quot;../imagens/Group 5.png&quot;)).getImage();&#xa;        java.awt.Graphics2D g2 = (java.awt.Graphics2D) g.create();&#xa;        g2.drawImage(img, 0, 0, getWidth(), getHeight(), null);&#xa;        g2.dispose();&#xa;    }&#xa;}"/>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JButton() {&#xa;    @Override&#xa;    public void paintComponent(java.awt.Graphics g) {&#xa;        java.awt.Image img = new javax.swing.ImageIcon(getClass().getResource(&quot;/imagens/Group 5.png&quot;)).getImage();&#xa;        java.awt.Graphics2D g2 = (java.awt.Graphics2D) g.create();&#xa;        g2.drawImage(img, 0, 0, getWidth(), getHeight(), null);&#xa;        g2.dispose();&#xa;    }&#xa;}"/>
           </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
